# mev-ant

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  serve.toml
dashboard/: .umirc.ts  package-lock.json  package.json
dashboard/pages/: Attackers.tsx  Dashboard.less  Sandwiches.tsx  ScanConfig.tsx
data/testdata/: data1.csv
deploy/: INSTALL.md  dev.sh  install.sh  mev-ant.service  redeploy.sh  schema.sql  serve.toml.example  setup-db.sh
docs/: DEVELOPMENT.md  failure-modes.md
docs/adr/: 0001-classifier-and-trace-funder.md  0002-live-reth-testing-strategy.md  0003-separate-liquidity-job.md  0004-route-sort-output-first.md
docs/issues/: 0001-tracer-bullet-univ2-end-to-end.md  0002-add-univ3-exact-quoting.md  0003-add-curve-exact-quoting.md  0004-shared-pool-identity-vault-style.md  0005-expand-registry-top-protocols.md  0006-background-liquidity-job.md  0007-lending-market-liquidity.md  0008-hardening-monitoring-tests.md  0009-caller-chosen-route-sort.md  0010-gas-cost-double-counts-priority.md  0011-fix-quote-confidence-estimated-drop.md
docs/plan/: 0001-liquidity-registry-and-routing.md
docs/protocols/: protocol-aave.md  protocol-abi-address-reference.md  protocol-balancer.md  protocol-compound-v2.md  protocol-compound-v3-comet.md  protocol-curve-llamalend.md  protocol-curve.md  protocol-dodo.md  protocol-ekubo.md  protocol-euler-v2.md  protocol-fluid-vault.md  protocol-fraxlend.md  protocol-liquity-v1.md  (+13 more)
src/: api.rs  classifier.rs  config.rs  db.rs  integration_tests.rs  main.rs  models.rs  repository.rs  rpc.rs  scanner.rs  services.rs  tokens.rs
(+53 files in other folders)
