[package]
name = "mev-ant"
version = "0.1.0"
edition = "2021"
description = "Historical sandwich MEV scanner for Ethereum mainnet"

[dependencies]
alloy = { version = "1", features = ["full"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "bigdecimal",
] }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex-literal = "0.4"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
